@@ -6,19 +6,17 @@ import akka.persistence.PersistentRepr;
 import akka.persistence.journal.japi.AsyncWriteJournal;
 import akka.serialization.SerializationExtension;
 import com.github.dao.bigtable.BigtableExtension;
-import com.google.api.client.util.Lists;
 import com.google.cloud.bigtable.data.v2.BigtableDataClient;
 import com.typesafe.config.Config;
+import io.reactivex.rxjava3.core.Flowable;
+import io.reactivex.rxjava3.core.Single;
 import lombok.SneakyThrows;
 import lombok.extern.slf4j.Slf4j;
-import reactor.core.publisher.Flux;
-import reactor.core.publisher.Mono;
 import scala.compat.java8.ScalaStreamSupport;
 import scala.concurrent.Future;
 
 import java.util.List;
 import java.util.Optional;
-import java.util.concurrent.CompletableFuture;
 import java.util.function.Consumer;
 import java.util.stream.Collectors;
 import java.util.stream.StreamSupport;
@@ -50,21 +48,21 @@ public class BigtableWriteJournal extends AsyncWriteJournal {
             log.debug("event=replayMessage msg={}", persistentRepr);
             replayCallback.accept(persistentRepr);
         };
-        Mono<Void> result = dao.replayMessages(persistenceId, fromSequenceNr, toSequenceNr, max, callback)
-                .doOnSuccess(unused -> {
+        return dao.replayMessages(persistenceId, fromSequenceNr, toSequenceNr, max, callback)
+                .doOnComplete(() -> {
                     log.debug("event=doAsyncReplayMessages persistenceId={} fromSequenceNr={} toSequenceNr={} max={} OK",
                             persistenceId, fromSequenceNr, toSequenceNr, max);
                 })
                 .doOnError(throwable -> {
                     log.debug("event=doAsyncReplayMessages persistenceId={} fromSequenceNr={} toSequenceNr={} max={} FAIL",
                             persistenceId, fromSequenceNr, toSequenceNr, max, throwable);
-                });
-        return toScala(result.toFuture());
+                })
+                .to(upstream -> toScala(upstream.toCompletionStage(null)));
     }
 
     @Override
     public Future<Long> doAsyncReadHighestSequenceNr(String persistenceId, long fromSequenceNr) {
-        Mono<Long> result = dao.readHighestSequenceNr(persistenceId, fromSequenceNr)
+        return dao.readHighestSequenceNr(persistenceId, fromSequenceNr)
                 .doOnSuccess(sequenceNr -> {
                     log.debug("event=doAsyncReadHighestSequenceNr persistenceId={} fromSequenceNr={} OK {}",
                             persistenceId, fromSequenceNr, sequenceNr);
@@ -72,63 +70,67 @@ public class BigtableWriteJournal extends AsyncWriteJournal {
                 .doOnError(throwable -> {
                     log.debug("event=doAsyncReadHighestSequenceNr persistenceId={} fromSequenceNr={} FAIL",
                             persistenceId, fromSequenceNr, throwable);
-                });
-        return toScala(result.toFuture());
+                })
+                .to(upstream -> toScala(upstream.toCompletionStage()));
     }
 
     @Override
     public Future<Iterable<Optional<Exception>>> doAsyncWriteMessages(Iterable<AtomicWrite> messages) {
         log.debug("event=doAsyncWriteMessages messages={}", messages);
-        List<JournalItem> batchWriteMessages = Lists.newArrayList();
-        CompletableFuture<Void> batchWriteFuture = new CompletableFuture<>();
+        List<Flowable<JournalItem>> itemsList = toJava(messages);
 
-        List<CompletableFuture<Void>> futures = StreamSupport.stream(messages.spliterator(), false)
-                .map(atomicWrite -> {
-                    try {
-                        List<JournalItem> journalItems = ScalaStreamSupport.stream(atomicWrite.payload())
-                                .map(serializer::toBinary)
-                                .collect(Collectors.toList());
-                        batchWriteMessages.addAll(journalItems);
-                        return batchWriteFuture;
-                    } catch (Exception exception) {
-                        return CompletableFuture.<Void>failedFuture(exception);
-                    }
-                })
-                .collect(Collectors.toList());
+        Single<List<JournalItem>> batch = Flowable.fromIterable(itemsList)
+                .flatMap(Flowable::onErrorComplete)
+                .toList();
 
-        dao.writeMessages(batchWriteMessages)
-                .doOnSuccess(batchWriteFuture::complete)
-                .doOnError(batchWriteFuture::completeExceptionally)
-                .subscribe();
-
-        Mono<Iterable<Optional<Exception>>> result = Flux.fromIterable(futures)
-                .concatMap(future -> Mono.fromCompletionStage(future)
-                        .thenReturn(Optional.<Exception>empty())
-                        .onErrorResume(BigtableWriteJournal::toOptionalException))
-                .collectList()
-                .map(optionals -> optionals);
-        return toScala(result.toFuture());
+        return batch
+                .flatMapCompletable(dao::writeMessages)
+                .toSingleDefault(Optional.empty())
+                .flatMap(unused -> Flowable.fromIterable(itemsList)
+                        .flatMapSingle(items -> items.toList()
+                                .map(journalItems -> Optional.<Exception>empty())
+                                .onErrorReturn(throwable -> Optional.of(toException(throwable))))
+                        .toList())
+                .map(optionals -> (Iterable<Optional<Exception>>) optionals)
+                .to(upstream -> toScala(upstream.toCompletionStage()));
     }
 
     @Override
     public Future<Void> doAsyncDeleteMessagesTo(String persistenceId, long toSequenceNr) {
-        Mono<Void> result = dao.deleteMessages(persistenceId, toSequenceNr)
-                .doOnSuccess(unused -> {
+        return dao.deleteMessages(persistenceId, toSequenceNr)
+                .doOnComplete(() -> {
                     log.debug("event=doAsyncDeleteMessagesTo persistenceId={} toSequenceNr={} OK",
                             persistenceId, toSequenceNr);
                 })
                 .doOnError(throwable -> {
                     log.debug("event=doAsyncDeleteMessagesTo persistenceId={} toSequenceNr={} FAIL",
                             persistenceId, toSequenceNr, throwable);
-                });
-        return toScala(result.toFuture());
+                })
+                .to(upstream -> toScala(upstream.toCompletionStage(null)));
     }
 
-    private static Mono<? extends Optional<Exception>> toOptionalException(Throwable throwable) {
+    private List<Flowable<JournalItem>> toJava(Iterable<AtomicWrite> messages) {
+        return StreamSupport.stream(messages.spliterator(), false)
+                .map(atomicWrite -> {
+                    try {
+                        List<JournalItem> journalItems = ScalaStreamSupport.stream(atomicWrite.payload())
+                                .map(serializer::toBinary)
+                                .collect(Collectors.toList());
+                        return Flowable.fromIterable(journalItems);
+                    } catch (Exception exception) {
+                        return Flowable.<JournalItem>error(exception);
+                    }
+                })
+                .collect(Collectors.toList());
+    }
+
+
+    @SneakyThrows
+    private static Exception toException(Throwable throwable) {
         if (throwable instanceof Exception) {
-            return Mono.just(Optional.of((Exception) throwable));
+            return (Exception) throwable;
         } else {
-            return Mono.error(throwable);
+            throw throwable;
         }
     }
 }
